# CV-builder

./: .env.example  .gitignore  README.md  build-with-cache.sh  docker-compose.backend.dev.yml  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  admin.py  backend_pre_start.py  enums.py  main.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/alembic/migrations/: 6bec4302ec7e_25_12_27_init_db.py
backend/app/alembic/versions/: 6bec4302ec7e_25_12_27_init_db.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/routes/: health.py  login.py  user.py  utils.py
backend/app/core/: __init__.py  beat_schedule.py  celery.py  config.py  db.py  s3.py  security.py
backend/app/custom_types/: __init__.py
backend/app/exceptions/: __init__.py  exceptions.py  users.py
backend/app/middlewares/: __init__.py  common.py  rate_limit.py
backend/app/models/: __init__.py  common.py  user.py
backend/app/repositories/: __init__.py  base.py  user.py
backend/app/schemas/: __init__.py  utils.py
backend/app/seed/: __init__.py  data_users.py  main.py  seeders.py
backend/app/services/: __init__.py  redis.py
backend/app/tasks/: __init__.py  beat_schedule.py
backend/app/tests/: __init__.py
backend/app/tests/api/routes/: test_login.py  test_private.py  test_users.py
backend/app/tests/crud/: __init__.py  test_user.py
backend/app/tests/services/: test_settings_service.py
backend/app/tests/utils/: __init__.py  user.py  utils.py
backend/app/utils/: __init__.py  email.py  generators.py  token.py
backend/docs/: commands.md
backend/k8s/: configmap.yaml  deployments.yaml  prestart-job.yaml  secrets.yaml  services-ingress.yaml
backend/scripts/: start-celery-worker.sh  validate_docs_config.sh  verify_prestart_dependencies.sh
backend/tests/api/: __init__.py
backend/tests/api/routes/: __init__.py
backend/tests/scripts/: __init__.py
backend/tests/services/: test_common.py  test_settings_service.py
docs/: index.md
frontend/: .dockerignore  .env.example  .gitignore  .npmrc  Dockerfile  Dockerfile.dev  Dockerfile.playwright  biome.json  index.html  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  sync-deps.sh  tailwind.config.js  vite.config.ts
frontend/src/: index.css  (+4 more)
internal_docs/: mkdocs.yml
scripts/: README.md  deploy.sh  dev-start.sh  start-celery-beat.sh  start-celery-worker.sh  validate_dev_environment.sh
(+83 files in other folders)
