[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator>=2.1.0",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "emails<1.0,>=0.6",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "sqlmodel<1.0.0,>=0.0.21",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.3.0",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    "pyjwt<3.0.0,>=2.8.0",
    "fastapi-cache2[redis] (>=0.2.2,<0.3.0)",
    "sqladmin (>=0.21.0,<0.22.0)",
    "boto3 (>=1.40.46,<1.40.62)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.0,<10.0.0)",
    "uvicorn[standard]>=0.30.0",

    # --- Base de datos ---
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # --- Validación / settings ---
    "pydantic>=2.7.0",
    "pydantic-settings<3.0.0,>=2.3.0",
   
    # --- Celery + Redis ---
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "aioredis>=2.0.0",

    # --- Object storage ---
    "minio>=7.2.0",

    # --- Generación PDF ---
    "weasyprint>=62.0",
    "jinja2>=3.1.4",

    # --- Utilidades ---
    "python-slugify>=8.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.4.0",
    "orjson>=3.10.0",            # serialización rápida en FastAPI
]

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
